<resources>
    <string name="app_name">Lab Test 1</string>
    <string name="these_are_the_exam_soluctions_for_comp2100_lab_test_1">These are the exam soluctions for COMP2100 Lab Test 1</string>
    <string name="qb4_greeting_app">QB4 Greeting App</string>
    <string name="qb1_scribble_app">QB1 Scribble App</string>
    <string name="qb2_count_down_timer">QB2 Count down timer</string>
    <string name="qb3_random_line_drawer">QB3 Random line drawer</string>
    <string name="qb5_menu">QB5 Menu</string>
    <string name="by_danny_firmin">By Danny Firmin</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter">ENTER</string>
</resources>
